--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 38.86.135.36, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: 38.68.134.85, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.59MB/s(Youtube:不良林), server: 38.68.134.85, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 波兰-564.5KB/s(Youtube:不良林), server: 217.30.10.65, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇯🇵 日本-2.49MB/s(Youtube:不良林), server: 85.208.108.18, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 38.121.43.71, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: 38.114.114.19, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 波兰-1.55MB/s(Youtube:不良林), server: 217.30.10.65, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇯🇵 日本-2.17MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: 38.68.134.85, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-2.27MB/s(Youtube:不良林), server: 38.114.114.69, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-2.16MB/s(Youtube:不良林), server: 38.68.134.85, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: 38.114.114.69, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.98MB/s(Youtube:不良林), server: 38.114.114.69, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 38.114.114.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 38.114.114.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林) 2, server: 38.114.114.19, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 波兰-564.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 波兰-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 波兰-564.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 波兰-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 波兰-564.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 波兰-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 波兰-564.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 波兰-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 波兰-564.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 波兰-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 波兰-564.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 波兰-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
+      - 波兰-564.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
       - 波兰-1.55MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
