--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 波兰-422.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇫🇷 法国-422.1KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 38.114.114.49, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-351.7KB/s(Youtube:不良林), server: 38.68.134.85, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.68.134.85, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-865.4KB/s(Youtube:不良林), server: 38.114.114.19, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 波兰-710.1KB/s(Youtube:不良林), server: 217.30.10.65, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇺🇸 美国-461.4KB/s(Youtube:不良林), server: 38.75.136.21, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: 38.68.134.85, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-2.09MB/s(Youtube:不良林), server: 38.86.135.27, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 38.114.114.69, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: 38.114.114.69, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: 38.114.114.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-439.9KB/s(Youtube:不良林), server: 38.114.114.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-757.3KB/s(Youtube:不良林), server: 38.75.136.21, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-304.9KB/s(Youtube:不良林), server: 38.121.43.71, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2, server: 38.75.136.21, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-288.1KB/s(Youtube:不良林), server: 38.121.43.71, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-832.4KB/s(Youtube:不良林), server: 38.64.138.145, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-865.4KB/s(Youtube:不良林)
-      - 波兰-710.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-461.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 波兰-422.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-865.4KB/s(Youtube:不良林)
-      - 波兰-710.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-461.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 波兰-422.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-865.4KB/s(Youtube:不良林)
-      - 波兰-710.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-461.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 波兰-422.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-865.4KB/s(Youtube:不良林)
-      - 波兰-710.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-461.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 波兰-422.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-865.4KB/s(Youtube:不良林)
-      - 波兰-710.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-461.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 波兰-422.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-865.4KB/s(Youtube:不良林)
-      - 波兰-710.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-461.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 波兰-422.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-865.4KB/s(Youtube:不良林)
-      - 波兰-710.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-461.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 波兰-422.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-422.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-351.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-304.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.34MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-288.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-832.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
